AP-18197: Materialize append table in compgraph
Also includes some simplifications and cleanup.